# Daumenkino

./: .gitignore  Boot.hs  Daumenkino.cabal  Main.hs  README.md  Weltfrieden.cabal  daumenkino.el  weltfrieden.el
Data/: colors.txt  rgb-syllable-count.txt  rgb-syllables.txt
Graphics/Daumenkino/: Colors.hs  Context.hs  Params.hs  Pattern.hs  Prim.hs  Shader.hs  Space.hs  Strategies.hs  Text.hs  Tidal.hs  XKCD.hs
Graphics/Weltfrieden/: Colors.hs  Context.hs  Params.hs  Shader.hs  Text.hs  XKCD.hs
Shaders/: shader.frag  shader.vert
