name:                Daumenkino
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis:            Tidal interface to graphical display
homepage:            https://github.com/lennart/Daumenkino
license-file:        LICENSE
author:              Lennart Melzer
maintainer:          lennart@melzer.it

-- A copyright notice.
-- copyright:

category:            Graphics

build-type:          Simple

extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable             Daumenkino
  main-is:             Main.hs
  other-moduleS:
    Gear
  build-depends:       base >=4.7 && <5, tidal >=0.8 && <0.9, hosc, containers, colour, GLFW-b, OpenGL, transformers, stm, pretty, mtl, time, bytestring
  default-language:    Haskell2010                     
library
  -- Modules exported by the library.
  exposed-modules:   Graphics.Daumenkino.Context
                     Graphics.Daumenkino.Colors
                     Graphics.Daumenkino.XKCD
                     Graphics.Daumenkino.Prim
                     Graphics.Daumenkino.Pattern
                     Graphics.Daumenkino.Strategies

  -- Modules included in this library but not exported.
  other-modules:
                     Graphics.Daumenkino.Params
                     Graphics.Daumenkino.Shader
                     NGL.LoadShaders


  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base >=4.7 && <5, tidal >=0.8 && <0.9, hosc, containers, colour, GLFW-b, OpenGL, time

  default-language:    Haskell2010
